--- a/CódigoFuente/BitacorasProduccion/Content/emails_plantillas/PM_rechazo.html
+++ b/CódigoFuente/BitacorasProduccion/Content/emails_plantillas/PM_rechazo.html
@@ -302,10 +302,10 @@
                                                     <td valign="top" align="center" style="padding:0;Margin:0;width:780px">
                                                         <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                                             <tr style="border-collapse:collapse">
-                                                                <td align="center" style="padding:0;Margin:0;padding-bottom:10px"><h2 style="Margin:0;line-height:36px;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-size:30px;font-style:normal;font-weight:bold;color:#333333">¡Hola, ha recibido una P&oacute;liza Manual para su Validaci&oacute;n!</h2></td>
+                                                                <td align="center" style="padding:0;Margin:0;padding-bottom:10px"><h2 style="Margin:0;line-height:36px;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-size:30px;font-style:normal;font-weight:bold;color:#333333">¡Hola, la P&oacute;liza Manual ##NUM_PM ha sido rechazada!</h2></td>
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
-                                                                <td align="left" style="padding:0;Margin:0;padding-top:15px;padding-bottom:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#777777;font-size:16px">El usuario #USUARIO, ha enviado la P&oacute;liza Manual con n&uacute;mero #NUM_PM para su validaci&oacute;n.</p></td>
+                                                                <td align="left" style="padding:0;Margin:0;padding-top:15px;padding-bottom:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#777777;font-size:16px">El usuario #RECHAZANTE, ha rechazado la P&oacute;liza Manual ##NUM_PM. Verifique los datos y env&iacute;ela nuevamente.</p></td>
                                                             </tr>
                                                         </table>
                                                     </td>
@@ -380,7 +380,12 @@
                                                                         <tr style="border-collapse:collapse">
                                                                             <td style="padding:5px 10px 5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">Descripci&oacute;n</p></td>
                                                                             <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#DESCRIPCION_PM</p></td>
-                                                                        </tr>                                                                      
+                                                                        </tr>
+                                                                        <tr style="border-collapse:collapse">
+                                                                            <td style="padding:5px 10px 5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">Raz&oacute;n Rechazo</p></td>
+                                                                            <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#RECHAZO</p></td>
+                                                                        </tr>
+
                                                                     </table>
                                                                 </td>
                                                             </tr>
