--- a/CódigoFuente/BitacorasProduccion/Content/emails_plantillas/IT_MR_notificacion_rechazo_solicitante.html
+++ b/CódigoFuente/BitacorasProduccion/Content/emails_plantillas/IT_MR_notificacion_rechazo_solicitante.html
@@ -302,10 +302,10 @@
                                                     <td valign="top" align="center" style="padding:0;Margin:0;width:780px">
                                                         <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                                             <tr style="border-collapse:collapse">
-                                                                <td align="center" style="padding:0;Margin:0;padding-bottom:10px"><h2 style="Margin:0;line-height:36px;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-size:30px;font-style:normal;font-weight:bold;color:#333333">¡Hola, ha recibido una Solicitud de Requerimientos de Usuario!</h2></td>
+                                                                <td align="center" style="padding:0;Margin:0;padding-bottom:10px"><h2 style="Margin:0;line-height:36px;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-size:30px;font-style:normal;font-weight:bold;color:#333333">¡Hola, su Solicitud de Requerimientos de Usuario ha sido rechazada!</h2></td>
                                                             </tr>
                                                             <tr style="border-collapse:collapse">
-                                                                <td align="left" style="padding:0;Margin:0;padding-top:15px;padding-bottom:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#777777;font-size:16px">El usuario #SOLICITANTE ha enviado una Solicitud de Requerimientos para el empleado #EMPLEADO. Para aprobar esta solicitud ingrese al enlace situado al final del correo. </p></td>
+                                                                <td align="left" style="padding:0;Margin:0;padding-top:15px;padding-bottom:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#777777;font-size:16px">El usuario #JEFE ha rechazado su Solicitud de Requerimientos para el empleado #EMPLEADO. Modifique su solicitud y env&iacute;ela nuevamente. </p></td>
                                                             </tr>
                                                         </table>
                                                     </td>
@@ -357,6 +357,10 @@
                                                                             <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#ID</p></td>
                                                                         </tr>
                                                                         <tr style="border-collapse:collapse">
+                                                                            <td style="padding:5px 10px 5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">Estado</p></td>
+                                                                            <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#ESTADO</p></td>
+                                                                        </tr>
+                                                                        <tr style="border-collapse:collapse">
                                                                             <td style="padding:5px 10px 5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">Fecha de Solicitud</p></td>
                                                                             <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#FECHA_SOLICITUD</p></td>
                                                                         </tr>
@@ -371,7 +375,11 @@
                                                                         <tr style="border-collapse:collapse">
                                                                             <td style="padding:5px 10px 5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">Comentarios Adicionales</p></td>
                                                                             <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#COMENTARIO</p></td>
-                                                                        </tr>             
+                                                                        </tr>
+                                                                        <tr style="border-collapse:collapse">
+                                                                            <td style="padding:5px 10px 5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">Raz&oacute;n de Rechazo</p></td>
+                                                                            <td style="padding:5px 0;Margin:0" width="50%" align="left"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">#RECHAZO</p></td>
+                                                                        </tr>
                                                                     </table>
                                                                 </td>
                                                             </tr>
