--- a/CódigoFuente/BitacorasProduccion/Content/emails_plantillas/Notificacion_solicitud_generica.html
+++ b/CódigoFuente/BitacorasProduccion/Content/emails_plantillas/Notificacion_solicitud_generica.html
@@ -374,7 +374,7 @@
                                                         <td align="center" valign="middle" bgcolor="#00a0fa" role="presentation" style="border-collapse:collapse; mso-line-height-rule:exactly; font-family:Arial, sans-serif; font-size:15px; color:#23496d; word-break:break-word; border-radius:8px; cursor:auto; background-color:#00a0fa">
                                                             <!--<![endif]-->
                                                             <a href="#ENLACE" target="_blank" style="color:#00a4bd; mso-line-height-rule:exactly; font-size:16px; font-family:Arial, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 18px; display:block" data-hs-link-id="0">
-                                                                <strong style="color:#ffffff;font-weight:normal;text-decoration:none;font-style:normal;">Ver solicitud</strong>
+                                                                <strong style="color:#ffffff;font-weight:normal;text-decoration:none;font-style:normal;">Ver detalles</strong>
                                                             </a>
                                                         </td>
                                                     </tr>
